# python_projects

./: .gitignore  SETUP.md  mypy.ini  postgres_demo.py
file_compression/: compress.py  compressmodule.py  gui.py
file_compression/data/: compressed_demo.txt  demo.txt
testproject/: pyproject.toml  pytest.ini  requirements.txt
testproject/src/models/: weather.py
testproject/src/mytests/: utils.py
testproject/src/services/: client.py
testproject/tests/: conftest.py  test_utils.py  test_weather_gov.py
testproject/tests/api/: conftest.py  test_tmp.py  test_weather_gov.py
testproject/tests/ui/: conftest.py  test_google_ui.py
texttospeech/: demo.py
